test_fm/_test55.ref
Error: left operand of comparison must be an Integer or a Character in '_test55.nj' on line 10
