test_fm/_test55.nj
//
// left operand not integer or character
//


public class Main extends Object {

  public static void main() {
    local Boolean x;
    x = true <= 1;
  }

}
